--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         </thead>
         <tbody>
         <tr>
-            <td>001index</td>
-            <td><a href="https://madewithcode.github.io/001index">https://madewithcode.github.io/001index</a></td>
-            <td>an index of all projects</td>
+            <td>001_index</td>
+            <td><a href="https://madewithcode.github.io/001_index">https://madewithcode.github.io/001_index</a></td>
+            <td>An index of all projects</td>
+        </tr>
+        <tr>
+            <td>002_Angular_WeatherApp</td>
+            <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">https://madewithcode.github.io/002_Angular_WeatherApp</a></td>
+            <td>Udemy Angular Course - Weather Single Page App (SPA)</td>
         </tr>
 
         </tbody>
