minimal info in index.html and added favicon.ico

--- a/index.html
+++ b/index.html
@@ -21,20 +21,17 @@
         <thead>
         <tr>
             <th>REPO</th>
-            <th>URL</th>
             <th>DESCRIPTION</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>001_index</td>
-            <td><a href="https://madewithcode.github.io/001_index">https://madewithcode.github.io/001_index</a></td>
+            <td><a href="https://madewithcode.github.io/001_index">001_index</a></td>
             <td>An index of all projects</td>
         </tr>
         <tr>
-            <td>002_Angular_WeatherApp</td>
-            <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">https://madewithcode.github.io/002_Angular_WeatherApp</a></td>
-            <td>Udemy Angular Course - Weather Single Page App (SPA)</td>
+            <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">002_Angular_WeatherApp</a></td>
+            <td>Udemy AngularJS Weather SPA</td>
         </tr>
 
         </tbody>
