--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
             <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">002_Angular_WeatherApp</a></td>
-            <td>Udemy AngularJS Weather SPA</td>
+            <td>Udemy Angular Weather SPA</td>
         </tr>
 
         </tbody>
