--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">002_Angular_WeatherApp</a></td>
             <td>Udemy Angular Weather SPA</td>
         </tr>
+        <tr>
+            <td><a href="https://madewithcode.github.io/010_Angular_Coursera">010_Angular_Coursera</a></td>
+            <td>Coursera Angular Class</td>
+        </tr>
 
         </tbody>
     </table>
