added info for all repos

--- a/index.html
+++ b/index.html
@@ -25,14 +25,62 @@
         </tr>
         </thead>
         <tbody>
+
+        <!-- 001 -->
         <tr>
             <td><a href="https://madewithcode.github.io/001_index">001_index</a></td>
             <td>An index of all projects</td>
         </tr>
+
+        <!-- 002 -->
         <tr>
             <td><a href="https://madewithcode.github.io/002_Angular_WeatherApp">002_Angular_WeatherApp</a></td>
             <td>Udemy Angular Weather SPA</td>
         </tr>
+
+        <!-- 003 -->
+        <tr>
+            <td><a href="http://madewithcode.github.io/003_Bootstrap">003_Bootstrap</a></td>
+            <td>Bootstrap Basics </td>
+        </tr>
+
+        <!-- 004 -->
+        <tr>
+            <td><a href="http://madewithcode.github.io/004_G_JavaScript101/">004_G_JavaScript101</a></td>
+            <td>JavaScript Basic Template</td>
+        </tr>
+
+        <!-- 005 -->
+        <tr>
+            <td><a href="http://madewithcode.github.io/005_G_AngularTemplate">005_G_AngularTemplate</a></td>
+            <td>Angular Basic Template</td>
+        </tr>
+
+        <!-- 006 -->
+        <tr>
+            <td><a href="http://madewithcode.github.io/006_G_Gradle">006_G_Gradle</a></td>
+            <td>Basic Gradle Web App</td>
+        </tr>
+
+        <!-- 007 -->
+        <tr>
+            <td><a href="https://madewithcode.github.io/007_G_Web2">007_G_Web2</a></td>
+            <td>Udemy Web Dev Course</td>
+        </tr>
+
+        <!-- 008 -->
+        <tr>
+            <td><a href="#">008</a></td>
+            <td><small>available</small></td>
+        </tr>
+
+        <!-- 009 -->
+        <tr>
+            <td><a href="https://madewithcode.github.io/009_Amzn">009_Amzn</a></td>
+            <td>Amazon Advertising API</td>
+        </tr>
+
+        <!-- 010 -->
         <tr>
             <td><a href="https://madewithcode.github.io/010_Angular_Coursera">010_Angular_Coursera</a></td>
             <td>Coursera Angular Class</td>
