--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="/images/favicon.ico" type="image/x-icon" rel="icon" />
+    <link href="images/favicon.ico" type="image/x-icon" rel="icon" />
 
     <title>index</title>
 
